--- a/public/assets/css/checkoutPay.css
+++ b/public/assets/css/checkoutPay.css
@@ -1,3 +1,5 @@
+/* css for checkout-paymrnt option page */
+
 *{
   font-family: "Roboto";
  }
@@ -8,11 +10,7 @@ body{
   padding-top: 40px ;
  
   background-size: 200% 100% !important;
-   -webkit-animation: move 10s ease infinite;
-           animation: move 10s ease infinite;
-   -webkit-transform: translate3d(0, 0, 0);
-           transform: translate3d(0, 0, 0);
-   background: linear-gradient(45deg, #4f9478 10%, #92b7dd 70%, #68e4e4 20%);
+  background: linear-gradient(45deg, #7cd1af 10%, #92b7dd 70%, #68e4e4 20%);
    
    height: 100vh;
 } 
@@ -21,9 +19,10 @@ body{
         opacity: 1;
 }
 
+/*for all radio buttons position*/
+
 .radio {
         margin: 1px;
-       /* background-color: red; */
         color: black;
         text-align: left;
         padding-left: 70px;
@@ -32,9 +31,12 @@ body{
       
       }
 
+
+/*main grid container for holding main form*/
+
  .grid-container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(2, 50px);
         background-color: white;
         color: black;
@@ -44,10 +46,14 @@ body{
         border-radius: 6px;
       }
 
+/*for inputs radio buttons to float correctly*/
+
       input[type=radio] {
         float: left;
          margin: 3px 3px 3px 3px;
        }
+
+/*For tasty meal heading*/
    
    .heading{
      grid-column-start: 1;
@@ -56,12 +62,12 @@ body{
 
    }
 
-   .user__title{
+.user__title{
         padding-bottom: 30px;
         padding-top: 15px;
    }
 
-   .heading{
+.heading{
         color:rgb(48, 171, 187);
         font-size: 20px;
         }
@@ -78,6 +84,14 @@ body{
 
 button{
         width: 100%;
+}
+
+.Button1{
+        padding-right: 60px;
+}
+
+.Button2{
+        padding-left: 80px;
 }
 
 .cardPay-form{
