hire me status route

--- a/public/app/views/hireMe.html
+++ b/public/app/views/hireMe.html
@@ -78,7 +78,7 @@
     </nav>
        
     <div class="testbox">
-        <form action="/">
+        <form action="/hireMeStatus">
           <div class="banner">
           </div>
           <p>Hiring Information</p>
