--- a/public/app/views/hireMeStatus.html
+++ b/public/app/views/hireMeStatus.html
@@ -1,11 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/">
+    <meta charset="utf-8">
+    
+    <!-- Cascade Style Sheets -->
+    <link rel="stylesheet" type="text/css" href="assets/css/hireMeStyle.css">
+
+    
+    <!-- Main Angular Files -->
+    <script src="assets/js/angular.js"></script>
+    <script src="assets/js/angular-route.js"></script>
+    <script src="assets/js/angular-animate.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    
+
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+
     <title>Hire Me Status</title>
 </head>
 <body>
-    <p>You have successfully submitted your application. We will get back to you soon. Thanks for applying :)</p>
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">La Taco</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto topnav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                 <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
+               </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="app/views/order.html">Order</a>
+                </li>
+                <li class="nav-item">
+                   <a class="nav-link btn text-white" type="button" href="app/views/hireMe.html">Hire Me</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="app/views/about.html">About Us</a>
+                </li>
+                
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn text-white" type="button" href="app/views/register.html">Register</a>
+                </li>
+            </ul>
+        </div>
+
+   </nav>
+   <div >
+    <IMG class="displayed" src="../../assets/images/checkout-img/pickup-now.png" alt="">
+        <P class="blocktext">You have successfully submitted your application. We will get back to you soon. Thanks for applying :)</p>
+            
+        </div>
+    
+        <div class="spaceCreate">
+
+        </div>
+
+    <footer >
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright © TeamFullStack</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#" class="fa fa-facebook"></a>
+                        </li>
+                        <li><a href="#" class="fa fa-twitter"></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+      
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="assets/js/jquery-3.1.1.min.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+    
+</body>
+
 </body>
 </html>
