--- a/public/assets/css/hireMeStyle.css
+++ b/public/assets/css/hireMeStyle.css
@@ -48,6 +48,28 @@ html, body {
     width: 100%;
     height: 100%;
     }
+
+    IMG.displayed {
+        display: block;
+        margin-left: auto;
+        margin-right: auto
+    }
+
+    P.blocktext {
+        
+        margin-left: auto;
+        margin-right: auto;
+        width: 50em
+    }
+
+    .spaceCreate{
+
+        max-width: 100%;
+        margin: auto;
+        padding-top: 16%;
+
+    }
+
     input, select, textarea {
     margin-bottom: 10px;
     border: 1px solid #ccc;
