Changing the rows and columns for order page to fit bill summary

--- a/public/app/views/order.html
+++ b/public/app/views/order.html
@@ -42,9 +42,7 @@
 </head>
 
 <body ng-app="userApp">
-    <form action="/checkout" method="POST">
-        <button id="checkout" class="checkout" type="submit" >Proceed</button>
-    </from>
+   
    <!-- Collect the nav links, forms, and other content for toggling -->
    <div class="container">
 	
@@ -87,25 +85,15 @@
     </nav>
 </div>
 
-<div class="row">
-    <div class="column">
+<div class="column">
+    <div class="row">
         <div class="card">
             <header>
                 <h1>TACOS</h1>
             </header>
         </div>
     </div>
-    <div class="column">
-        <div class="card">
-            <header>
-                <h1>DRINKS</h1>
-            </header>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="column">
+    <div class="row">
         <div class="card">
             <header>
               <h2>Flamin Hot Doritos Locos Tacos</h2>
@@ -132,39 +120,8 @@
             </div>
         </div>
     </div>
-
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Pineapple Whip Freeze</h2>
-            </header>
-            <div class="row">
-                <p>$2.69</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
-<div class="row">
-    <div class="column">
+	
+	<div class="row">
         <div class="card">
             <header>
               <h2>Triplelupa</h2>
@@ -190,8 +147,235 @@
             </div>
         </div>
     </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Soft Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                  <select name="qty" id="qty"> 
+                    <option value="none" selected disabled hidden> 
+                        Select an qty 
+                    </option> 
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                  </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Crunchy Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.29</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Nacho Cheese Doritos Locos Taco</h2>
+            </header>
+            <div class="row">
+                <p>$1.89</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Chalupa Supreme</h2>
+            </header>
+            <div class="row">
+                <p>$3.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	 <div class="row">
+        <div class="card">
+            <header>
+              <h2>Cheesy Gordita Crunch</h2>
+            </header>
+            <div class="row">
+                <p>$3.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	 <div class="row">
+        <div class="card">
+            <header>
+              <h2>Spicy Potato Soft Taco </h2>
+            </header>
+            <div class="row">
+                <p>$1.23</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Crunchwrap Supreme</h2>
+            </header>
+            <div class="row">
+                <p>$3.99</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+</div>
 
-    <div class="column">
+<div class="column">
+	<div class="row">
+        <div class="card">
+            <header>
+                <h1>DRINKS</h1>
+            </header>
+        </div>
+    </div>
+	
+	<div class="row">
+        <div class="card">
+            <header>
+              <h2>Pineapple Whip Freeze</h2>
+            </header>
+            <div class="row">
+                <p>$2.69</p>
+                <label for="qty">Quantity</label>
+                <div class="space">
+                    <select name="qty" id="qty"> 
+                        <option value="none" selected disabled hidden> 
+                          Select an qty 
+                      </option> 
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                    </select> 
+                </div>
+                <div class="space">
+                    <button type="button" class="btn btn-success">Add to order</button>
+                </div>
+            </div>
+        </div>
+    </div>
+	
+	<div class="row">
         <div class="card">
             <header>
               <h2>Tropicanna Pink Lemonade</h2>
@@ -218,38 +402,7 @@
         </div>
     </div>
 
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Soft Taco</h2>
-            </header>
-            <div class="row">
-                <p>$1.29</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                  <select name="qty" id="qty"> 
-                    <option value="none" selected disabled hidden> 
-                        Select an qty 
-                    </option> 
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                  </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="column">
+	<div class="row">
         <div class="card">
             <header>
               <h2>Regular Iced Coffee</h2>
@@ -275,39 +428,8 @@
             </div>
         </div>
     </div>
-
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Crunchy Taco</h2>
-            </header>
-            <div class="row">
-                <p>$1.29</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="column">
+	
+	<div class="row">
         <div class="card">
             <header>
               <h2>Wild Strawberry Candy Freeze</h2>
@@ -333,39 +455,8 @@
             </div>
         </div>
     </div>
-
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Nacho Cheese Doritos Locos Taco</h2>
-            </header>
-            <div class="row">
-                <p>$1.89</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="column">
+	
+	<div class="row">
         <div class="card">
             <header>
               <h2>Mountain Dew Baja Blast Freeze</h2>
@@ -391,39 +482,8 @@
             </div>
         </div>
     </div>
-
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Chalupa Supreme</h2>
-            </header>
-            <div class="row">
-                <p>$3.69</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="column">
+	
+	 <div class="row">
         <div class="card">
             <header>
               <h2>Brisk Mango Fiesta</h2>
@@ -449,98 +509,27 @@
             </div>
         </div>
     </div>
-
+	
 </div>
 
+<div class="column">
+    <div class="card">
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Cheesy Gordita Crunch</h2>
-            </header>
-            <div class="row">
-                <p>$3.69</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
+        <header>
+            <h1>Bill Summary</h1>
+        </header>
+        <form action="/checkout" method="POST">
+            <button id="checkout" class="checkout" type="submit" >Proceed</button>
+        </from>
+
+    </div>
+
+    <div class="spaceCreate">
+
     </div>
 </div>
 
 
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Spicy Potato Soft Taco </h2>
-            </header>
-            <div class="row">
-                <p>$1.23</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <header>
-              <h2>Crunchwrap Supreme</h2>
-            </header>
-            <div class="row">
-                <p>$3.99</p>
-                <label for="qty">Quantity</label>
-                <div class="space">
-                    <select name="qty" id="qty"> 
-                        <option value="none" selected disabled hidden> 
-                          Select an qty 
-                      </option> 
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select> 
-                </div>
-                <div class="space">
-                    <button type="button" class="btn btn-success">Add to order</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <footer >
     <div class="container">
