User authentication done

--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -79,7 +79,7 @@
             <h1 class="user__title">Tasty Meal waiting for You!!!</h1>
         </header>
         
-        <form action="/login" method="POST" class="form">
+        <form action="/userLogin" method="POST" class="form">
             <div class="form__group">
                 <input type="text" placeholder="Username" class="form__input" name ="username" required ="true"/>
             </div>
@@ -89,7 +89,7 @@
                 <input type="password" placeholder="Password" class="form__input" name ="password" required ="true"/>
             </div>
             
-            <button class="btn btn-primary" type="button">Log In</button>
+            <button class="btn btn-primary" type="submit">Log In</button>
         </form>
     </div>
 
