added routes fro nav bar

--- a/public/app/views/checkoutStatus.html
+++ b/public/app/views/checkoutStatus.html
@@ -38,36 +38,36 @@
           <ul class="navbar-nav ml-auto topnav">
                 
             <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/menu">Menu <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="app/views/order.html">Order</a>
+                    <a class="nav-link" href="/order">Order</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
+                    <a class="nav-link" href="/hireMe">Hire Me</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="app/views/about.html">About Us</a>
+                    <a class="nav-link" href="/about">About Us</a>
                 </li>
                 
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="app/views/contact.html">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
+                    <a class="nav-link btn text-white" type="button" href="/login">Sign In</a>                  
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link btn text-white" type="button" href="app/views/register.html">Register</a>
+                    <a class="nav-link btn text-white" type="button" href="/register">Register</a>
                 </li>
 
             </ul>
