--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="app/views/order.html">Order</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hire Me</a>
+                        <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="app/views/about.html">About Us</a>
@@ -57,7 +57,7 @@
                     
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="app/views/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
