--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -90,8 +90,8 @@
   <header>
       <div class="container">
           <div class="intro-text">            
-            <div class="intro-heading">Taco Cart</div>
-            <div class="intro-lead-in">Food as Fuel!</div>
+            <div class="intro-heading">La Taco</div>
+            <div class="intro-lead-in">Let's Taco</div>
           </div>
       </div>
   </header>
