--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -326,7 +326,7 @@ header {
     text-align: center;
     color:whitesmoke;
     background-attachment: scroll;
-    background-image: url(../images/aussie-style-beef-and-salad-tacos-86525-1.jpeg);
+    background-image: url(../images/cheeseTaco.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
