--- a/public/app/views/contact.html
+++ b/public/app/views/contact.html
@@ -49,8 +49,8 @@
                         <a class="nav-link" href="app/views/order.html">Order</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hire Me</a>
-                    </li>
+                      <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
+                  </li>
                     <li class="nav-item">
                         <a class="nav-link" href="app/views/about.html">About Us</a>
                     </li>
