--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -7,7 +7,7 @@ body {
   #contact {
     width: 100%;
     height: 100vh;
-    background-color: rgb(110, 194, 185);
+    background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
     overflow: hidden;
     padding-bottom: 200px;
   }
@@ -66,6 +66,7 @@ body {
     margin-top: 10px;
     font: 300 14px 'Lato', sans-serif;
     letter-spacing: 2px;
+    
     
   }
   
